2018.8/_sources/plugins/available/phylogeny/filter-table.txt
filter-table: Remove features from table if they're not present in tree.
========================================================================



.. raw:: html

   <div class="tabbed">
     <ul class="nav nav-tabs">
       <li class="active"><a data-toggle="tab" href="#cli">Command line interface</a></li>
       <li><a data-toggle="tab" href="#api">Artifact API</a></li>
     </ul>
     <div class="tab-content">
       <div id="cli" class="tab-pane fade in active">
         <h4>Docstring:</h4>
         <pre>Usage: qiime phylogeny filter-table [OPTIONS]

     Remove features from a feature table if their identifiers are not tip
     identifiers in tree.

   Options:
     --i-table ARTIFACT PATH FeatureTable[Frequency]
                                     Feature table that features should be
                                     filtered from.  [required]
     --i-tree ARTIFACT PATH Phylogeny[Rooted | Unrooted]
                                     Tree where tip identifiers are the feature
                                     identifiers that should be retained in the
                                     table.  [required]
     --o-filtered-table ARTIFACT PATH FeatureTable[Frequency]
                                     The resulting feature table.  [required if
                                     not passing --output-dir]
     --output-dir DIRECTORY          Output unspecified results to a directory
     --cmd-config PATH               Use config file for command options
     --verbose                       Display verbose output to stdout and/or
                                     stderr during execution of this action.
                                     [default: False]
     --quiet                         Silence output if execution is successful
                                     (silence is golden).  [default: False]
     --citations                     Show citations and exit.
     --help                          Show this message and exit.</pre>
       </div>
       <div id="api" class="tab-pane fade">
       <h4>Import:</h4>

.. command-block::
   :no-exec:

   from qiime2.plugins.phylogeny.methods import filter_table

.. raw:: html

       <h4>Docstring:</h4>
         <pre>Remove features from table if they're not present in tree.

   Remove features from a feature table if their identifiers are not tip
   identifiers in tree.

   Parameters
   ----------
   table : FeatureTable[Frequency]
       Feature table that features should be filtered from.
   tree : Phylogeny[Rooted | Unrooted]
       Tree where tip identifiers are the feature identifiers that should be
       retained in the table.

   Returns
   -------
   filtered_table : FeatureTable[Frequency]
       The resulting feature table.</pre>
       </div>
     </div>
   </div>